manifests/0000_10_openshift_service-ca_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-service-ca
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
