manifests/00_servicecaoperator_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/run-level: "1"
  name: openshift-core-operators
