manifests/0000_09_service-ca-operator_05_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-service-ca-operator
  name: service-ca-operator
  labels:
    app: service-ca-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-ca-operator
  template:
    metadata:
      name: service-ca-operator
      labels:
        app: service-ca-operator
    spec:
      serviceAccountName: service-ca-operator
      containers:
      - name: operator
        image: quay.io/openshift/origin-service-ca-operator:v4.0
        imagePullPolicy: IfNotPresent
        command: ["service-ca-operator", "operator"]
        args:
        - "--config=/var/run/configmaps/config/operator-config.yaml"
        - "-v=4"
        volumeMounts:
        - mountPath: /var/run/configmaps/config
          name: config
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 400
          secretName: serving-cert
          optional: true
      - name: config
        configMap:
          defaultMode: 440
          name: service-ca-operator-config
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - operator: Exists
