manifests/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
    include.release.openshift.io/single-node-production-edge: "true"
  labels:
    app: service-ca-operator
  name: metrics
  namespace: openshift-service-ca-operator
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: service-ca-operator
  sessionAffinity: None
  type: ClusterIP
